--- a/assets/dashboard/css/all.css
+++ b/assets/dashboard/css/all.css
@@ -4388,5 +4388,5 @@ readers do not read off random characters that represent icons */
 
 .fa,
 .fas {
-  font-family: 'Font Awesome 5 Free';
+  font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-weight: 900; }
